Tue Dec 22 20:00:18 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c: Don't call SQLAllocEnv for ODBC 3

Thu Dec 17 22:08:50 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: Automatic odbc version selection

Thu Dec 17 11:33:39 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- Fix statistics functions for Sybase

Wed Dec 16 14:06:17 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/connectparams.c src/odbc/error.c:
	* src/odbc/odbc.c:
	- Simplified yesterday path for Windows compile

Wed Dec 16 13:54:52 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c: Fix conversion for uni(var)char

Wed Dec 16 09:22:41 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: Fix uninitilized memory access problem

Tue Dec 15 12:45:47 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c win32/winsetup.c:
	- Fix compile under Windows

Tue Dec 15 12:23:27 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/common.h src/odbc/unittests/stats.c:
	- Fix data_type returned from statistics function

Tue Dec 15 10:52:43 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/connectparams.c src/odbc/odbc.c:
	- Avoid wrong configuration problem reporting problems

Tue Dec 15 10:13:12 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c:
	- Update Unixodbc configuration settings for TDS version

Sun Dec 13 20:01:01 EST 2009	JK Lowden <jklowden@freetds.org>
	* doc/freetds.conf.5 doc/userguide.sgml
	- updated documentation in preparation for upcoming release. 

Sun Dec 13 11:37:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/rpc_ct_setparam.c src/tds/query.c:
	- Fix posting longbinary on Sybase server
